# turbocrawler

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
crawler_manager/: __init__.py  logger.py
crawler_manager/engine/: __init__.py  crawler.py  crawler_queue.py  crawler_runner.py  models.py  url_extractor.py
crawler_manager/engine/base_queues/: crawled_queue_base.py  crawler_queue_base.py
crawler_manager/parsers/: json_file_maker.py
crawler_manager/queues/: crawled_queue.py  crawler_queues.py  default_queue.py
crawlers/: test_crawler.py
easycrawl/: __init__.py  logger.py
easycrawl/engine/: __init__.py  crawler.py  crawler_runner.py
easycrawl/engine/base_queues/: crawler_queue_base.py
easycrawl/queues/: crawled_queue.py  crawler_queues.py
easycrawler/: __init__.py  logger.py
easycrawler/engine/: __init__.py  crawler.py  crawler_runner.py  url_extractor.py
easycrawler/engine/base_queues/: crawler_queue_base.py
easycrawler/queues/: crawled_queue.py  crawler_queues.py
engine/: control.py  crawler.py  crawler_queue.py  crawler_request.py  crawler_response.py  crawler_runner.py  url_extractor.py
parsers/: json_file_maker.py
selenium_module/: get_driver.py
tests/: main.py  test_crawler.py  test_exception.py  test_orchestrator.py  test_plugin.py
tests/crawlers/: test_crawler.py
tests/test_crawlers/: quotes_crawler.py
turbocrawler/: __init__.py  logger.py  utils.py
turbocrawler/engine/: __init__.py  control.py  crawler.py  crawler_runner.py  models.py  plugin.py  url_extractor.py  worker_queues.py
turbocrawler/engine/base_queues/: crawled_queue_base.py  crawler_queue_base.py
turbocrawler/engine/data_types/: crawler.py  crawler_runner_config.py  info.py
turbocrawler/engine/runners/: crawler_runner.py  thread_runner.py
turbocrawler/orchestrator/: orchestrator.py
turbocrawler/queues/: crawled_queue.py  crawler_queues.py
