[tool.poetry]
name = "crawler_manager"
version = "0.1.0"
description = ""
authors = ["jorgepvasconcelos"]
readme = "README.md"
packages = [{ include = "crawler_manager" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
parsel = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
