[tool.poetry]
name = "crawler_manager"
version = "0.1.0"
description = ""
authors = ["jorgepvasconcelos"]
readme = "README.md"
packages = [{ include = "crawler_manager" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
parsel = "*"
requests = "*"
ruff = "*"

[tool.ruff]
line-length = 120
target-version = "py311"

select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # comprehensions
#    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "PGH", # pygrep-hooks
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint import style
    "PLW", # pylint
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020

]
ignore = []

fixable = ["A", "B", "C", "D", "E", "F", "I", "UP007"]
unfixable = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
