[tool.poetry]
name = "turbocrawler"
version = "0.0.1-1"
license = "MIT"
description = "Scraping and Crawling Micro-Framework"
authors = ["toriium"]
keywords = ["crawler", "crawler framework", "scraping", "turbocrawler"]
readme = "README.md"
packages = [{ include = "turbocrawler" }]
homepage = "https://github.com/toriium/turbocrawler"
repository = "https://github.com/toriium/turbocrawler"

[tool.poetry.dependencies]
python = "^3.11"
parsel = "*"


[tool.poetry.group.dev.dependencies]
requests = "*"
ruff = "*"

[tool.ruff]
line-length = 120
target-version = "py311"

select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # comprehensions
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "PGH", # pygrep-hooks
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint import style
    "PLW", # pylint
#    "RET", # flake8-return
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020

]
ignore = []

fixable = ["A", "B", "C", "D", "E", "F", "I", "UP007"]
unfixable = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
